--- a/package.json
+++ b/package.json
@@ -6,14 +6,6 @@
     "@capacitor/android": "^6.1.2",
     "@capacitor/core": "^6.1.2",
     "@capacitor/ios": "^6.1.2",
-    "axios": "^1.7.7",
-    "embla-carousel-react": "^8.2.1",
-    "react-draggable": "^4.4.6",
-    "react-icons": "^5.3.0",
-    "react-markdown": "^9.0.1",
-    "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.0",
-    "swiper": "^11.1.12",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
@@ -23,13 +15,21 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
+    "embla-carousel-react": "^8.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
+    "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "slick-carousel": "^1.8.1",
     "stylis-plugin-rtl": "^2.1.1",
+    "swiper": "^11.1.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -57,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@capacitor/cli": "^6.1.2",
     "tailwindcss": "^3.4.14"
   }
 }
